# CreateMate

./: .gitignore  agent1qd3zs5uz5y_data.json
Backend/: README.md  config.py  main.py  pyproject.toml  requirements.txt  test_client.py
Backend/Agents/: content_generation_agent.py  main_coordinator_agent.py  scheduling_agent.py  storage_agent.py  topic_suggestion_agent.py
Backend/api/: __init__.py  routes.py
Backend/models/: __init__.py  models.py
Backend/utils/: __init__.py  helpers.py
Frontend/: index.html  script.js  styles.css
